--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "kartik-v/yii2-editable": "dev-master",
         "kartik-v/yii2-widget-datetimepicker": "dev-master",
         "kartik-v/yii2-widget-timepicker": "*",
-        "kartik-v/yii2-icons": "@dev"
+        "kartik-v/yii2-icons": "@dev",
+        "rahmatullo/eskiz-sms": "^1.5"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
