--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "kartik-v/yii2-widget-timepicker": "*",
         "kartik-v/yii2-icons": "@dev",
         "rahmatullo/eskiz-sms": "^1.5",
-        "lavrentiev/yii2-toastr": "dev-master"
+        "lavrentiev/yii2-toastr": "dev-master",
+        "kartik-v/yii2-mpdf": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
